Fix sidebar overflow and scroll

--- a/app/styles/sidebar/_teamInfo.scss
+++ b/app/styles/sidebar/_teamInfo.scss
@@ -1,11 +1,14 @@
 .teamInfo {
-  width: calc(100% - 90px - 20px);
+  width: calc(100% - 90px);
   height: 100%;
   position: absolute;
-  right: 10px;
+  right: 0;
+  padding-right: 10px;
+  box-sizing: border-box;
   .team {
     display: block;
     padding-top: 25px;
+    padding-left: 18px;
     margin-bottom: 35px;
     .name {
       font-size: 18px;
@@ -39,11 +42,16 @@
   }
   .channelsContainer {
     height: calc(100% - 109px);
-    overflow: hidden;
-    &:hover {
-      overflow: auto;
+    padding-left: 18px;
+    overflow: auto;
+    &::-webkit-scrollbar-thumb, &::-webkit-scrollbar-track {
+      visibility: hidden;
     }
-    &::-webkit-scrollbar-thumb {
+    &:hover::-webkit-scrollbar-track {
+      visibility: visible;
+    }
+    &:hover::-webkit-scrollbar-thumb {
+      visibility: visible;
       border-radius: 5px;
       -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.55);
       background-color: rgba(255, 255, 255, 0.1);
